# aiyoucli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  package-lock.json  package.json  skills-lock.json
.GCC/plans/: model-engine.md
__tests__/: q-table-persistence.test.ts
crates/aiyoucli-napi/: Cargo.toml
crates/aiyoucli-proxy/: Cargo.toml
crates/aiyoucli-proxy/src/: ast.rs  cache.rs  compressor.rs  embeddings.rs  firewall.rs  lib.rs  llm.rs  napi.rs  restrictions.rs  segmenter.rs  semantic.rs  shield.rs
crates/aiyoucli-rd/: Cargo.toml
crates/aiyoucli-rd/src/: lib.rs
docs/: architecture.md  cli-reference.md  configuration.md  getting-started.md  local-models.md  mcp-tools.md
scripts/: dualmodels.sh  treemodels.sh  unimodel.sh
src/: config.ts  types.ts
src/commands/: index.ts
src/init/: interactive.ts  opencode-config.ts  settings-generator.ts
src/mcp/tools/: ast-tools.ts  config-tools.ts  hooks-tools.ts  index.ts  model-engine-tools.ts  models-tools.ts  proxy-tools.ts  rd-tools.ts  semantic-tools.ts  system-tools.ts
src/models/: index.ts  launcher.ts  manager.ts  minio.ts  types.ts  vram.ts
src/napi/: proxy.ts
src/production/: error-handler.ts
src/rd/: engine.ts
src/semantic/: agent-profiles.ts
