[package]
name = "aiyoucli-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM proxy/gateway NAPI — compression, routing, firewall, local gateway"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
parking_lot = "0.12"
regex = "1"

[build-dependencies]
napi-build = "2"
